--- a/random_numbers.ipynb
+++ b/random_numbers.ipynb
@@ -35,16 +35,16 @@
     {
      "data": {
       "text/plain": [
-       "[-84.05642739175167,\n",
-       " -86.10999566097102,\n",
-       " -18.266384799009842,\n",
-       " -32.19529417223286,\n",
-       " -10.8786106864659,\n",
-       " -11.767903459808473,\n",
-       " 57.22350221914485,\n",
-       " 83.7286056412066,\n",
-       " 27.411849224049515,\n",
-       " -73.20884694983336]"
+       "[51.13249208191957,\n",
+       " -59.75401851845001,\n",
+       " -64.81426770134426,\n",
+       " 15.738318872996068,\n",
+       " 51.17837024956198,\n",
+       " 74.58199769252921,\n",
+       " 9.456345848638415,\n",
+       " -89.96643386106022,\n",
+       " 87.96896476974202,\n",
+       " 4.670417130835145]"
       ]
      },
      "execution_count": 3,
@@ -76,19 +76,19 @@
     {
      "data": {
       "text/plain": [
-       "array([-35.95279375, -53.4569651 , -84.98417034,  55.93808179,\n",
-       "        81.92308772, -88.26924709,  10.87486393, -55.75087628,\n",
-       "        47.91965489,  55.79080838, -35.34297037, -75.86380719,\n",
-       "       -81.10739324,  68.6232835 , -86.56685059, -44.47528054,\n",
-       "       -73.79433871, -24.32024287, -18.10628481,  48.4744865 ,\n",
-       "        84.96962665,  50.67007358,  84.46445786, -54.46098307,\n",
-       "        66.80576098,  -5.14921601,  18.73596633,  56.03277737,\n",
-       "       -80.3988222 ,  78.5235056 , -87.08598511, -23.79002934,\n",
-       "        35.56123771,  25.89043453,  19.03961971,  24.04691926,\n",
-       "        -3.75375839, -75.74656559,   0.30122577, -25.17935817,\n",
-       "        23.11431715, -13.53353835,  58.99827271,  17.31773123,\n",
-       "        67.88398149,  21.6156625 ,   8.02705723,  63.76744833,\n",
-       "       -70.41128474, -75.58253356])"
+       "array([-68.81908168, -46.01259091,   5.38773301,  44.70260349,\n",
+       "        31.12934593,  72.43084774,  15.43562503,  21.44189683,\n",
+       "       -44.83249976,  -9.79140982, -16.31163329, -26.14220415,\n",
+       "         5.37416623, -33.99414694,  76.12148448,  16.48644251,\n",
+       "        83.84236946, -69.936963  , -56.18539546,  52.48518366,\n",
+       "        59.75224888,  66.02121195, -81.39464588,  84.79944832,\n",
+       "        23.63809311,  -7.55237691,  -8.51591277, -23.15615948,\n",
+       "        85.67436059, -56.31084043, -34.42788235, -86.735924  ,\n",
+       "        75.43712257,  88.92050388,  -0.1064676 ,  89.72362604,\n",
+       "         4.92482709,  80.86961442, -70.89487352, -29.94594734,\n",
+       "       -63.93447174,  17.99545668,  79.267564  , -25.75840437,\n",
+       "        32.98600042, -64.48885285, -33.34231722,  -8.24839153,\n",
+       "        -6.96580629,  45.72466527])"
       ]
      },
      "execution_count": 5,
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.4 µs ± 140 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "13.7 µs ± 418 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3 ms ± 43.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.55 ms ± 106 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "# Use the citipy module to determine city based on latitude and longitude.\n",
-    "from citipy import citipy\n"
+    "from citipy import citipy"
    ]
   },
   {
@@ -217,59 +217,48 @@
     "# Create a practice set of random latitude and longitude combinations.\n",
     "x = [25.12903645, 25.92017388, 26.62509167, -59.98969384, 37.30571269]\n",
     "y = [-67.59741259, 11.09532135, 74.84233102, -76.89176677, -61.13376282]\n",
-    "coordinates = zip(x, y)"
+    "coordinates = list(zip(x, y)) #Warining zip allocate one shot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "683bed83",
+   "id": "fc6273d9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.12903645 -67.59741259\n",
-      "25.92017388 11.09532135\n",
-      "26.62509167 74.84233102\n",
-      "-59.98969384 -76.89176677\n",
-      "37.30571269 -61.13376282\n"
+      "cockburn town tc\n",
+      "gat ly\n",
+      "parvatsar in\n",
+      "punta arenas cl\n",
+      "saint george bm\n"
      ]
     }
    ],
    "source": [
     "# Use the tuple() function to display the latitude and longitude combinations.\n",
     "for coordinate in coordinates:\n",
-    "    print(coordinate[0], coordinate[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "fc6273d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use the tuple() function to display the latitude and longitude combinations.\n",
-    "for coordinate in coordinates:\n",
+    "    \n",
     "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
-    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
+    "      citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "37ce0d13",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "5"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
