--- a/random_numbers.ipynb
+++ b/random_numbers.ipynb
@@ -35,16 +35,16 @@
     {
      "data": {
       "text/plain": [
-       "[51.13249208191957,\n",
-       " -59.75401851845001,\n",
-       " -64.81426770134426,\n",
-       " 15.738318872996068,\n",
-       " 51.17837024956198,\n",
-       " 74.58199769252921,\n",
-       " 9.456345848638415,\n",
-       " -89.96643386106022,\n",
-       " 87.96896476974202,\n",
-       " 4.670417130835145]"
+       "[-87.7941546735804,\n",
+       " 53.218673971009025,\n",
+       " -22.13523531831804,\n",
+       " -2.684755532630331,\n",
+       " -41.32166646032314,\n",
+       " -56.130509704265755,\n",
+       " -11.255156217796648,\n",
+       " 66.09491660864956,\n",
+       " -46.50136087586575,\n",
+       " -59.96065326286431]"
       ]
      },
      "execution_count": 3,
@@ -76,19 +76,19 @@
     {
      "data": {
       "text/plain": [
-       "array([-68.81908168, -46.01259091,   5.38773301,  44.70260349,\n",
-       "        31.12934593,  72.43084774,  15.43562503,  21.44189683,\n",
-       "       -44.83249976,  -9.79140982, -16.31163329, -26.14220415,\n",
-       "         5.37416623, -33.99414694,  76.12148448,  16.48644251,\n",
-       "        83.84236946, -69.936963  , -56.18539546,  52.48518366,\n",
-       "        59.75224888,  66.02121195, -81.39464588,  84.79944832,\n",
-       "        23.63809311,  -7.55237691,  -8.51591277, -23.15615948,\n",
-       "        85.67436059, -56.31084043, -34.42788235, -86.735924  ,\n",
-       "        75.43712257,  88.92050388,  -0.1064676 ,  89.72362604,\n",
-       "         4.92482709,  80.86961442, -70.89487352, -29.94594734,\n",
-       "       -63.93447174,  17.99545668,  79.267564  , -25.75840437,\n",
-       "        32.98600042, -64.48885285, -33.34231722,  -8.24839153,\n",
-       "        -6.96580629,  45.72466527])"
+       "array([-22.99949887,  58.00111798,  83.06123196,  42.46769373,\n",
+       "        74.21402151,  25.02566821,  68.30062565, -39.38032813,\n",
+       "        39.30277029, -10.19760227, -61.55281448, -14.73987167,\n",
+       "       -79.36123216,  58.41271672, -59.37321402,  45.10396541,\n",
+       "        65.99144776, -19.49463285, -29.91925328,   3.0684179 ,\n",
+       "        52.26349192,  21.77139949, -49.16519451,  76.58214799,\n",
+       "        39.46364801,  -0.18830777,  27.46417259,  -3.45976801,\n",
+       "        21.87336202, -34.88949089,  88.31209287, -40.97108195,\n",
+       "       -51.31252016, -80.20291774,  62.84313709,  22.42000381,\n",
+       "         1.06470701, -25.48901402,  67.64578067, -79.12659893,\n",
+       "       -55.43532251, -51.02839371, -50.26394325,  35.07423569,\n",
+       "       -31.43575562,  81.82957625,  30.87992237, -27.16626527,\n",
+       "       -53.37130344, -59.27145471])"
       ]
      },
      "execution_count": 5,
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.7 µs ± 418 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "13.4 µs ± 466 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.55 ms ± 106 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.53 ms ± 80.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -279,8 +279,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "22458bb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the requests library.\n",
+    "import requests\n",
+    "\n",
+    "# Import the API key.\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "472beda3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Starting URL for Weather Map API Call.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "186871c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=8eddf569469271eb386eac5a6401fd72&q=Boston\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f72d10cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8bd7a42b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "924f40e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":802,\"main\":\"Clouds\",\"description\":\"scattered clouds\",\"icon\":\"03n\"}],\"base\":\"stations\",\"main\":{\"temp\":26.02,\"feels_like\":19.11,\"temp_min\":22.73,\"temp_max\":29.25,\"pressure\":1033,\"humidity\":44},\"visibility\":10000,\"wind\":{\"speed\":5.99,\"deg\":0,\"gust\":0},\"clouds\":{\"all\":36},\"dt\":1645747109,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1645702066,\"sunset\":1645741649},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request.\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c081bd9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 802,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'scattered clouds',\n",
+       "   'icon': '03n'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 26.02,\n",
+       "  'feels_like': 19.11,\n",
+       "  'temp_min': 22.73,\n",
+       "  'temp_max': 29.25,\n",
+       "  'pressure': 1033,\n",
+       "  'humidity': 44},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 5.99, 'deg': 0, 'gust': 0},\n",
+       " 'clouds': {'all': 36},\n",
+       " 'dt': 1645747109,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1645702066,\n",
+       "  'sunset': 1645741649},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON text of the 'Get' request.\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9204225a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "fe0f743c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 2,\n",
+       " 'id': 2013408,\n",
+       " 'country': 'US',\n",
+       " 'sunrise': 1645702066,\n",
+       " 'sunset': 1645741649}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON data.\n",
+    "boston_data = city_weather.json()\n",
+    "boston_data['sys']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "29885b89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1645747109"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data[\"dt\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "938be743",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 29.25 44 36 5.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat, lng, max_temp, humidity, clouds, wind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "107ce36f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-02-24 23:58:29'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the datetime module from the datetime library.\n",
+    "from datetime import datetime\n",
+    "# Get the date from the JSON file.\n",
+    "date = boston_data[\"dt\"]\n",
+    "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
+    "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ef3fa6a",
    "metadata": {},
    "outputs": [],
    "source": []
